feat(component/aside): aside menu adicionado

--- a/ts/src/app/components/aside/aside.component.html
+++ b/ts/src/app/components/aside/aside.component.html
@@ -1,1 +1,16 @@
-<p>aside works!</p>
+<aside class="aside__container">
+  <header class="aside__header">
+    <h1 class="title__header">slaca 2019</h1>
+  </header>
+  <div class="aside__content">
+    <app-logo></app-logo>
+    <nav class="aside__menu">
+        <a class="menu__item">Apresentação</a>
+        <a class="menu__item">Comitês</a>
+        <a class="menu__item">Autores</a>
+        <a class="menu__item">Eixos temáticos</a>
+        <a href="#" class="menu__item active">Trabalhos</a>
+        <a class="menu__item">Contato</a>
+    </nav>
+  </div>
+</aside>
