--- a/ts/src/app/components/aside/aside.component.scss
+++ b/ts/src/app/components/aside/aside.component.scss
@@ -42,6 +42,7 @@
   font-weight: 500;
   display: flex;
   align-items: center;
+  text-decoration: none;
   &:hover {
     cursor: pointer;
   }
@@ -52,6 +53,7 @@
 // ESTABELECER ALGUM REGRA PARA CRIAR
 a.active {
   background-color:rgba(253, 241, 235, 1);
+  border-left: 5px solid #EE7A3A;
 
 }
 
