--- a/ts/src/app/components/aside/aside.component.scss
+++ b/ts/src/app/components/aside/aside.component.scss
@@ -1,60 +1,59 @@
-.aside__container{
+@import '../../../assets/scss/variables/colors';
+@import '../../../assets/scss/variables/fonts';
+
+.aside__container {
   height: 100vh;
   width: 15vw;
-  background-color: #fff;
+  background-color: $white-color;
   position: fixed;
-  color: #fff;
+  color: $white-color;
   box-sizing: content-box;
 
 }
 
-.aside__container .aside__header{
-  background: linear-gradient(180deg, #FFB354 0%, #EE7A3A 100%);
+.aside__container .aside__header {
+  background: $gradient-color ;
   height: 10vh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.aside__header .title__header{
+.aside__header .title__header {
   font-size: 30px;
   text-transform: uppercase;
 }
 
 
-.aside__content .aside__menu{
+.aside__content .aside__menu {
 
-  background: rgba(255, 255, 255, 1);
-  color: rgba(114, 92, 92, 1);
-  border-bottom: 2px solid rgba(231, 231, 231, 1);
-  box-sizing: content-box;
-
+  height: 100vh;
+  background: $primary-rgb-color;
+  color: $default-rgb-color;
   text-align: left;
 }
 
-.aside__menu .menu__item{
-
+.aside__menu .menu__item {
+  font-family: $quicksand;
   height: 33px;
   padding-left: 24px;
-  color: rgba(114, 92, 92, 1);
-  border-bottom: 2px solid rgba(231, 231, 231, 1);
-  font-size: 15px ;
+  color: $default-rgb-color;
+  border-bottom: 2px solid $border-rgb-color;
+  font-size: 15px;
   font-weight: 500;
   display: flex;
   align-items: center;
   text-decoration: none;
+
   &:hover {
     cursor: pointer;
   }
-  &:active{
-    background-color: aqua;
-  }
+
 }
+
 // ESTABELECER ALGUM REGRA PARA CRIAR
 a.active {
-  background-color:rgba(253, 241, 235, 1);
-  border-left: 5px solid #EE7A3A;
+  background-color: $secondary-rgb-color;
+  border-left: 5px solid $secondary-color;
 
 }
-
-
