--- a/ts/src/app/components/header/header.component.html
+++ b/ts/src/app/components/header/header.component.html
@@ -1,1 +1,25 @@
-<p>header works!</p>
+<header class="container__header">
+  <main class="content__header">
+    <div class="header__apresentation">
+      <h2 class="apresentation__subtitle">
+        Anais do Simpósio Latino Americano de Ciências de Alimentos
+      </h2>
+      <h1>Anais do 13º Simpósio Latino Americano de Ciência de Alimentos</h1>
+      <h2 class="apresentation__subtitle">ISSN: 1234-5678</h2>
+    </div>
+    <div class="header__btn">
+      <button class="btn__languages">
+        <img class="globe__img" src="" alt="globe image" />
+        <p class="btn__text">PT, BR</p>
+        <img class="dropdown_img" src="" alt="dropdown image" />
+      </button>
+    </div>
+    <div class="header__user-content">
+        <span class="user__information">
+          <p class="user__greetings">Bem vindo!</p>
+          <p class="user__email">alguem12@galoascience.com</p>
+        </span>
+        <img class="user__picture" src="" alt="user profile picture">
+    </div>
+  </main>
+</header>
