refactor: no app component

--- a/ts/src/app/app.component.html
+++ b/ts/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div>
+<main class="container__app">
   <app-aside></app-aside>
-  <div class="container__app">
-    <h2>vtnc</h2>
+  <div class="content__app">
+  <app-header></app-header>
   </div>
-</div>
+</main>
