styles: adciona uma nova variavel global para a cor do btn no header

--- a/ts/src/assets/scss/variables/_colors.scss
+++ b/ts/src/assets/scss/variables/_colors.scss
@@ -11,3 +11,5 @@ $secondary-rgb-color: rgba(253, 241, 235, 1);
 $default-rgb-color: rgba(114, 92, 92, 1);
 $border-rgb-color: rgba(231, 231, 231, 1);
 $btn-background: $gradient-color;
+$btn-header-text-color: rgba(51, 51, 51, 1);
+
