refactor: refactor do app.component

--- a/ts/src/app/app.component.html
+++ b/ts/src/app/app.component.html
@@ -1,6 +1,9 @@
 <main class="container__app">
   <app-aside></app-aside>
   <div class="content__app">
-  <app-header></app-header>
+    <router-outlet>
+    <app-header>
+    </app-header>
+  </router-outlet>
   </div>
 </main>
