--- a/ts/src/assets/scss/variables/_colors.scss
+++ b/ts/src/assets/scss/variables/_colors.scss
@@ -12,4 +12,5 @@ $default-rgb-color: rgba(114, 92, 92, 1);
 $border-rgb-color: rgba(231, 231, 231, 1);
 $btn-background: $gradient-color;
 $btn-header-text-color: rgba(51, 51, 51, 1);
-
+$border-header-color: rgba(236, 236, 236, 1);
+$references-color: rgba(173, 160, 160, 1);
