refactor: adiciona atualizações cruciais

--- a/ts/src/app/app.component.html
+++ b/ts/src/app/app.component.html
@@ -1,9 +1,8 @@
 <main class="container__app">
   <app-aside></app-aside>
   <div class="content__app">
-    <router-outlet>
-    <app-header>
-    </app-header>
+  <router-outlet class="" >
+     
   </router-outlet>
   </div>
 </main>
