--- a/ts/src/app/components/aside/aside.component.scss
+++ b/ts/src/app/components/aside/aside.component.scss
@@ -7,7 +7,7 @@
   background-color: $white-color;
   color: $white-color;
   box-sizing: content-box;
-
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
 }
 
 .aside__container .aside__header {
