--- a/ts/src/app/pages/home/home.component.scss
+++ b/ts/src/app/pages/home/home.component.scss
@@ -7,7 +7,7 @@
   // background-color: darksalmon;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 90%;
   min-height: 100vh;
 }
 
@@ -25,6 +25,7 @@
   display: flex;
   flex-direction: row;
   height: 80vh;
+  justify-content: space-between;
 }
 
 .content__home .topic__intro {
@@ -32,8 +33,8 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  width: 70%;
-  height: 80vh;
+  width: 75%;
+  height: fit-content;
   box-sizing: content-box;
 
   h2 {
@@ -58,7 +59,9 @@
   // background-color: darkgray;
   align-items: center;
   height: 95%;
-  justify-content: space-around;
+  width: 23%;
+  text-align: right;
+  justify-content: space-between;
   gap: 0.5rem;
 }
 
@@ -105,10 +108,11 @@
 }
 
 .topic__details .details__title {
+  align-self: flex-end;
   color: $topic-text-color;
   font-weight: 500;
   //ou 16px
-  font-size: 14px;
+  font-size: 17px;
 
 }
 
@@ -144,9 +148,9 @@
   display: flex;
   flex-direction: column;
   padding: 1rem;
-  height: 78%;
+  height: 90%;
   box-sizing: content-box;
-  justify-content: space-around;
+  justify-content: space-between;
 
   ul li {
     list-style: none;
