--- a/ts/src/app/app.component.html
+++ b/ts/src/app/app.component.html
@@ -1,8 +1,9 @@
 <main class="container__app">
   <app-aside></app-aside>
   <div class="content__app">
-  <router-outlet class="" >
-     
-  </router-outlet>
+    <router-outlet class="" >
+    
+    </router-outlet>
+    <app-footer></app-footer>
   </div>
 </main>
