--- a/ts/src/app/app.component.scss
+++ b/ts/src/app/app.component.scss
@@ -1,14 +1,11 @@
-.container__app{
+.container__app {
   display: flex;
   height: 100vh;
-  background-color: crimson;
-
 }
-.container__app .content__app{
+
+.container__app .content__app {
   display: flex;
-  width: 98vw;
   flex-direction: column;
-  min-height: fit-content;
-  background-color: #fff;
+  height: 100vh;
 
 }
