--- a/ts/src/app/app.component.html
+++ b/ts/src/app/app.component.html
@@ -1,9 +1,6 @@
 <main class="container__app">
   <app-aside></app-aside>
   <div class="content__app">
-    <router-outlet class="" >
-    
-    </router-outlet>
-    <app-footer></app-footer>
+    <router-outlet class=""> </router-outlet>
   </div>
 </main>
