feat:  atualiza a base do component topic

--- a/ts/src/app/components/topic/topic.component.html
+++ b/ts/src/app/components/topic/topic.component.html
@@ -1,1 +1,31 @@
-<p>topic works!</p>
+<section class="section__discussions">
+  <div class="discussions__container">
+    <header class="discussions__header">
+      <h2 class="discussions__title">Discussões</h2>
+    </header>
+    <div class="discussions__content">
+      <div class="content__base">
+        <h3>Compartilhe suas ideias ou dúvidas com os autores!</h3>
+        <span class="base__icons">
+          <img class="icon" src="{{ icons.hand }}" alt="icon-hand" />
+          <img class="icon" src="{{ icons.questions }}" alt="icon-Q&A" />
+          <img class="icon" src="{{ icons.idea }}" alt="icon-idea" />
+        </span>
+        <span class="base__paragraph">
+          <p>
+            Sabia que o maior estímulo no desenvolvimento científico e cultural
+            é a curiosidade? Deixe seus questionamentos ou sugestões para o
+            autor!
+          </p>
+        </span>
+        <button class="btn-create-topic">
+          <img class="icon-add" src="{{ icons.add }}" alt="icon-add" />
+          criar tópico
+        </button>
+      </div>
+      <div class="list__content">
+        
+      </div>
+    </div>
+  </div>
+</section>
