refactor: corrige alguns elementos da page Home

--- a/ts/src/app/pages/home/home.component.html
+++ b/ts/src/app/pages/home/home.component.html
@@ -145,6 +145,9 @@
         </div>
       </div>
     </section>
+    <app-topic>
+      
+    </app-topic>
   </div>
 </main>
 <app-footer></app-footer>
