refactor: adiciona atualizações no componente topic

--- a/ts/src/app/components/topic/topic.component.html
+++ b/ts/src/app/components/topic/topic.component.html
@@ -23,9 +23,10 @@
           criar tópico
         </button>
       </div>
-      <div class="list__content">
-        
-      </div>
+    </div>
+    <div class="list__content">
+      <app-card-topic>      
+      </app-card-topic>
     </div>
   </div>
 </section>
