--- a/ts/src/app/components/topic/topic.component.scss
+++ b/ts/src/app/components/topic/topic.component.scss
@@ -1,10 +1,9 @@
 @import '../../../assets/scss/variables/colors';
 @import '../../../assets/scss/variables/fonts';
 
-
 .section__discussions {
   height: 75vh;
-
+  margin-bottom: 2rem;
 }
 
 .section__discussions .discussions__container {
@@ -12,7 +11,6 @@
   width: 100%;
   height: 100%;
   flex-direction: column;
-  // background-color: beige;
   align-items: center;
   border: 1px solid $border-header-color;
   border-radius: 3px;
@@ -22,7 +20,7 @@
   border: 1px solid $border-header-color;
   background-color: $secondary-rgb-color;
   width: 100%;
-  height: 7vh;
+  height: 22%;
   display: flex;
   align-items: center;
   border-radius: 3px, 3px, 0px, 0px;
@@ -100,4 +98,11 @@
     }
 
   }
+}
+
+.discussions__container .list__content{
+  height: 70vh;
+  display: flex;
+  justify-content: center;
+  width: 90%;
 }
