refactor: refactor da page home

--- a/ts/src/app/pages/home/home.component.html
+++ b/ts/src/app/pages/home/home.component.html
@@ -145,10 +145,7 @@
         </div>
       </div>
     </section>
-    <app-topic>
-      
-    </app-topic>
+    <app-topic> </app-topic>
+    <app-footer></app-footer>
   </div>
 </main>
-<app-footer></app-footer>
-
